# CPPPathMan

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
Include/: PathMan.hpp
Src/: PathMan.cpp
Tests/: CMakeLists.txt
Tests/Src/: PathMan_tests.cpp  main.cpp
